objects/sumoapp__InviteAttendee__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invite</label>
        <referenceTo>sumoapp__Invite__c</referenceTo>
        <relationshipLabel>Invite Attendees</relationshipLabel>
        <relationshipName>InviteAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Relation__c</fullName>
        <label>Relation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__SumoEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SUMO Event</label>
        <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
        <relationshipLabel>SUMO Invite Attendees</relationshipLabel>
        <relationshipName>SUMO_Invite_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SUMO Invite Attendee</label>
    <nameField>
        <displayFormat>IA-{000000}</displayFormat>
        <label>Invite Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Invite Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>